--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,1 +1,12 @@
-テストです
+
+<div class="container">
+    <div class="wrapper col-md-8 col-md-offset-2 col-sm-10">
+        
+    <%= form_for(@tweet) do |f| %>
+      <%= f.text_area :content %>
+      <br>
+      <%= f.submit "ツイート" %>
+    <% end %>
+        
+    </div>
+</div>
