#トップ画面 ツイートを新しい順（降順）に並べる

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,5 +1,7 @@
 
 <div class="container">
+    <div class="wrapper col-md-8 col-md-offset-2 col-sm-10">
+        
     <!-- ツイートフォーム -->
     <%= form_for(@tweet) do |f| %>
       <%= f.text_area :content %>
@@ -10,11 +12,11 @@
     <!-- ツイート表示 -->
     <% @tweets.each do |tweet| %>
       <div class="row">
-          <h6>稲本</h6>
+          <p>稲本 <span><%= tweet.created_at %></span></p>
           <h4><strong><%= tweet.content %></strong></h4>
       </div>
     <% end %>
     
-    <div class="wrapper col-md-8 col-md-offset-2 col-sm-10">
+    
     </div>
 </div>
