--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -4,12 +4,12 @@
     
     <div>
         <!-- ツイートフォーム -->
-        <%= form_for(@tweet) do |f| %>
-          <%= f.text_area :content, class: "post_tweet", :size => "40x5", placeholder: :"1文字以上255文字以下でツイート可能です" %>
-          <br>
-          <%= f.submit "ツイート" %>
-        <% end %>
         <p class="count_tweet">0</p>
+        <%= form_for(@tweet, url: choose_new_or_edit) do |f| %>
+          <%= f.text_area :content, class: "post_tweet form-control", :size => "40x5", placeholder: :"1文字以上255文字以下でツイート可能です" %>
+          <br>
+          <%= f.submit "ツイート", class: 'btn btn-primary btn-block' %>
+        <% end %>
     </div>
     
     <!-- ツイート表示 -->
@@ -17,7 +17,7 @@
       <div class="row">
           <p>稲本 <span><%= tweet.created_at %></span></p>
           <h4><strong><%= tweet.content %></strong></h4>
-          <%= link_to "削除", tweet_path(tweet.id), method: :delete, data: {confirm: "Are you sure?"} %>
+          <%= link_to "削除", tweet_path(tweet.id), method: :delete, data: {confirm: "Are you sure?"}, class: 'btn btn-default btn-sm btn btn-danger'%>
       </div>
     <% end %>
     
