デザインをツイッター色に

--- a/app/assets/stylesheets/tweets.scss
+++ b/app/assets/stylesheets/tweets.scss
@@ -33,6 +33,7 @@ input[type="submit"].btn-block{
 
 body {
     text-align: center;
+    background-color: #f5f8fa;
 }
 
 html {
@@ -42,7 +43,7 @@ html {
 
 header {
     width: 100%;
-    background-color: #2c3e50;
+    background-color: white;
     height: 54px;
 }
 
@@ -82,15 +83,15 @@ header li {
 }
 .navbar-default {
   .navbar-brand {
-    color: #ccc;
+    color: #66757f;
     &:hover {
-      color: white;
+      color: gray;
     }
   }
   .navbar-nav > li > a {
-    color: #ccc;
+    color: #66757f;
     &:hover, &:focus {
-      color: white;
+      color: gray;
     }
   }
   .navbar-nav > .open > a {
